--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,17 @@ homepage = "https://github.com/ethansaxenian/nhl-cli"
 python = "^3.9"
 typer = "^0.6.1"
 requests = "^2.28.1"
+rich = { version = "^12.5.1", optional = true }
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
 flake8 = "^5.0.4"
+
+[tool.poetry.extras]
+rich = ['rich']
+
+[tool.poetry.scripts]
+nhl = "app"
 
 [build-system]
 requires = ["poetry-core"]
