--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,16 @@ description = "A command-line interface for the public NHL API"
 authors = ["Ethan Saxenian <ethansaxenian@gmail.com>"]
 readme = "README.md"
 license = "MIT"
-packages = [{include = "nhl-cli"}]
+packages = [{include = "nhl"}]
 repository = "https://github.com/ethansaxenian/nhl-cli"
 homepage = "https://github.com/ethansaxenian/nhl-cli"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-typer = "^0.6.1"
 requests = "^2.28.1"
-rich = { version = "^12.5.1", optional = true }
+typer = "^0.6.1"
+rich = "^12.5.1"
+
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
@@ -23,7 +24,7 @@ flake8 = "^5.0.4"
 rich = ['rich']
 
 [tool.poetry.scripts]
-nhl = "app"
+nhl = "nhl.main:app"
 
 [build-system]
 requires = ["poetry-core"]
