--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ homepage = "https://github.com/ethansaxenian/nhl-cli"
 python = "^3.9"
 requests = "^2.28.1"
 typer = "^0.6.1"
-rich = "^12.5.1"
+rich = { version = "^12.5.1", optional = true }
 
 
 [tool.poetry.group.dev.dependencies]
