--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ typer = "^0.6.1"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
 black = "^22.8.0"
+pytest = "^7.1.3"
+responses = "^0.21.0"
 
 [tool.poetry.extras]
 rich = ['rich']
